Fix text (with HTML) node on pug

--- a/test/fixture/pug/001.pug
+++ b/test/fixture/pug/001.pug
@@ -29,7 +29,7 @@ html(LANG="en")
 		a(href="path/to" role="button") link1
 		a(href="path/to" role="document") link2
 		label(role="button"): input(type="text")
-		<img src="path/to" align="top">
+		<img src="path/to" align="top" invalid-attr>
 		img(src="path/to")
 							| invalid-indent
 
