Fixed to detect class names

--- a/test/fixture/pug/001.pug
+++ b/test/fixture/pug/001.pug
@@ -9,7 +9,7 @@ html(LANG="en")
 		title Document
 		script(src="/path/to/js/lib/jquery.min.js")
 		script(src="/path/to/js/main.js" async)
-	body
+	body.abc
 		DIV.a-b-c
 			h1 lorem
 
