Fixed "parmitted-content" rule when the element contained preprocessor specific block.

--- a/test/fixture/pug/001.pug
+++ b/test/fixture/pug/001.pug
@@ -1,12 +1,7 @@
 html(LANG="en")
 	head
-		meta(charset="UTF-8")
-		meta(
-			name="viewport"
-			content="width=device-width, initial-scale=1.0"
-		)
+		include path/to/meta-list.pug
 		meta( http-equiv = "X-UA-Compatible" content='ie=edge' )
-		title Document
 		script(src="/path/to/js/lib/jquery.min.js")
 		script(src="/path/to/js/main.js" async)
 	body.abc
