Fix color for darkmode.

--- a/website/src/pages/index.module.css
+++ b/website/src/pages/index.module.css
@@ -5,6 +5,7 @@
   overflow: hidden;
   background-image: url('/img/hero.jpg');
   background-size: cover;
+  color: #fff;
 }
 
 @media (min-resolution: 2dppx) {
