Fix to support Template Directive.

--- a/test/fixture/astro/010.astro
+++ b/test/fixture/astro/010.astro
@@ -9,7 +9,7 @@
 </MyComponent>
 
 <!-- Example: MyComponent.astro -->
-<div id="my-component">
+<div id="my-component" class:list={["a"]} class="b">
   <header>
     <!-- children with the `slot="header"` attribute will go here -->
     <slot name="header" />
