Add community pages.

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -63,3 +63,11 @@
 .hidden {
   display: none;
 }
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  white-space: nowrap;
+}
