--- a/playground/src/style/home.scss
+++ b/playground/src/style/home.scss
@@ -48,6 +48,11 @@ h2 {
 	text-align: center;
 }
 
+em {
+	font-weight: bold;
+	font-style: normal;
+}
+
 .editor {
 	margin: 0;
 	padding: 2em;
@@ -69,16 +74,24 @@ h2 {
 
 	a {
 		margin: 0;
-		padding: 0;
+		padding: 0.4em 1em;
+		border-radius: 0.5em;
 		display: block;
 		color: currentColor;
 		text-decoration: none;
 	}
 
+	a:hover,
+	a:focus {
+		background: #f5f5f5;
+	}
+
 	figure {
 		margin: 0;
 		padding: 0;
-		display: block;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
 	}
 
 	img {
