--- a/website/src/pages/index.module.css
+++ b/website/src/pages/index.module.css
@@ -14,14 +14,14 @@
   }
 }
 
-@media screen and (max-width: 996px) {
-  .heroBanner {
-    padding: 2rem;
-  }
-}
-
 .heroTitle {
   font-size: 4rem;
+}
+
+@media (max-width: 768px) {
+  .heroTitle {
+    font-size: 3.5rem;
+  }
 }
 
 .heroSubtitle {
