--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -17,6 +17,9 @@
   --docusaurus-highlighted-code-line-bg: rgb(0 0 0 / 10%);
   --ifm-h2-font-size: 2rem;
   --ifm-h3-font-size: 1.5rem;
+  --ml-blue: #1572eb;
+  --ml-blue-lightest: #d0e6fb;
+  --ml-ink: #333;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
