--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -13,6 +13,7 @@
   --ifm-color-primary-light: #007ccf;
   --ifm-color-primary-lighter: #0082d8;
   --ifm-color-primary-lightest: #0093f4;
+  --ifm-link-color: #005c99;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgb(0 0 0 / 10%);
   --ifm-h2-font-size: 2rem;
@@ -83,4 +84,8 @@
 
 .navbar__toggle {
   margin-right: 1rem;
+}
+
+main article {
+  --ifm-link-decoration: underline;
 }
