Fix to more easily distinguishable color combinations

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -38,7 +38,7 @@
 .theme-code-block {
   /**
    * For the choice of hue, referred to color univarsal design
-   * https://cudo.jp/?page_id=1565
+   * https://jfly.uni-koeln.de/colorset/
    */
   --code-color-red-light: hsl(18deg 100% 70%);
   --code-color-red-dark: hsl(18deg 100% 40%);
@@ -50,8 +50,8 @@
   --code-color-blue-dark: hsl(219deg 100% 40%);
   --code-color-sky-light: hsl(200deg 100% 82%);
   --code-color-sky-dark: hsl(200deg 100% 35%);
-  --code-color-pink-light: hsl(359deg 100% 80%);
-  --code-color-pink-dark: hsl(359deg 80% 48%);
+  --code-color-orange-light: hsl(41deg 90% 70%);
+  --code-color-orange-dark: hsl(41deg 100% 30%);
   --code-color-purple-light: hsl(300deg 50% 75%);
   --code-color-purple-dark: hsl(300deg 100% 30%);
   --code-color-lime-light: hsl(100deg 40% 50%);
