--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -36,29 +36,19 @@
 }
 
 .iconLink {
-  transition: background-color var(--ifm-transition-fast);
-}
-
-.iconLink.navbar__link {
-  border-radius: 9999px;
-}
-
-.iconLink.navbar__link:hover {
-  background-color: var(--ifm-color-emphasis-200);
+  display: inline-flex;
+  column-gap: 8px;
+  align-items: center;
 }
 
 .iconLink::before {
-  display: block;
+  display: inline-block;
   width: 24px;
   height: 24px;
   content: '';
-  background-color: #000;
+  background-color: currentColor;
   mask-repeat: no-repeat;
   mask-position: center;
-}
-
-[data-theme='dark'] .iconLink::before {
-  background-color: #fff;
 }
 
 .iconLink.iconLink--github::before {
@@ -86,6 +76,10 @@
   margin-right: 1rem;
 }
 
+:where(.navbar__items:not(.navbar__items--right)) .navbar__link {
+  padding-inline: min(1%, var(--ifm-navbar-item-padding-horizontal));
+}
+
 .markdown {
   --ifm-link-decoration: underline;
 }
@@ -98,4 +92,28 @@
 
 .DocSearch-Button {
   box-shadow: inset 0 0 0 1px var(--ifm-color-emphasis-300);
+}
+
+@media (max-width: 1200px) {
+  .navbar :is(.DocSearch-Button-Placeholder, .DocSearch-Button-Keys) {
+    display: none;
+  }
+}
+
+.footer {
+  --ifm-footer-link-hover-color: var(--ifm-color-primary-lighter);
+  --ifm-link-color: var(--ifm-footer-link-color);
+  --ifm-link-hover-color: var(--ifm-footer-link-hover-color);
+}
+
+.footer__links {
+  display: grid;
+  grid-auto-flow: column;
+  column-gap: 20px;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer__link-separator {
+  display: none;
 }
