--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -22,32 +22,36 @@
   --ifm-color-primary-lightest: var(--ml-blue-lightest);
   --ifm-color-primary-lighter: #8bb9f5;
   --ifm-color-primary-light: #5096f0;
+
   /* Contrast AA (primary: 4.52, primary-dark: 5.36) */
   --ifm-color-primary: var(--ml-blue);
   --ifm-color-primary-dark: #1267d4;
+
   /* Contrast AAA (primary-darker: 7.1, primary-darkest: 11.29) */
   --ifm-color-primary-darker: #0f55b1;
   --ifm-color-primary-darkest: #0a3976;
+  --ifm-color-primary-contrast-background: hsl(214deg 84% 97%);
   --ifm-link-color: var(--ifm-color-primary-darker);
   --docusaurus-highlighted-code-line-bg: rgb(0 0 0 / 10%);
-
   --ifm-code-font-size: 95%;
   --ifm-h2-font-size: 2rem;
   --ifm-h3-font-size: 1.5rem;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
-[data-theme='dark'] {
-  /* Contrast AAA (primary: 8.63, lighter colors have higher values) */
-  /* Additionally, primary has Lc-61.5 for the background color of #1b1b1d in APCA */
+:root[data-theme='dark'] {
+  /* Contrast AAA (primary: 8.63, lighter colors have higher values)
+     Additionally, primary has Lc-61.5 for the background color of #1b1b1d in APCA */
   --ifm-color-primary-lightest: #f5f9fe;
   --ifm-color-primary-lighter: #d2e4fb;
   --ifm-color-primary-light: #aecef8;
   --ifm-color-primary: #8bb9f5;
+
   /* Contrast AA (primary-dark: 6.82, primary-darker: 4.72) */
   --ifm-color-primary-dark: #68a4f2;
   --ifm-color-primary-darker: #3384ed;
   --ifm-color-primary-darkest: #0f55b1;
+  --ifm-color-primary-contrast-background: hsl(214deg 84% 10%);
   --ifm-link-color: var(--ifm-color-primary-light);
   --docusaurus-highlighted-code-line-bg: rgb(0 0 0 / 30%);
 }
@@ -73,12 +77,9 @@
   --code-color-purple-dark: hsl(300deg 100% 30%);
   --code-color-lime-light: hsl(100deg 40% 50%);
   --code-color-lime-dark: hsl(100deg 80% 25%);
-  --code-icon-padding-start: 6px;
-  --code-icon-padding-end: 6px;
-  --code-icon-size: 1.25em;
-  --code-icon-background-size: calc(
-    var(--code-icon-size) + var(--code-icon-padding-start) + var(--code-icon-padding-end)
-  );
+  --code-icon-padding: 0.25em;
+  --code-icon-size: 1em;
+  --code-icon-background-size: calc(var(--code-icon-size) + var(--code-icon-padding) * 2);
 
   overflow: hidden;
 }
@@ -98,19 +99,19 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: var(--code-icon-background-size);
+  width: calc(var(--code-icon-background-size) + 0.2em);
   height: var(--code-icon-background-size);
   content: '';
   background-color: var(--code-icon-background-color);
   border-right: 2px solid var(--ifm-color-content-inverse);
   border-bottom: 2px solid var(--ifm-color-content-inverse);
-  border-bottom-right-radius: 0.8rem;
+  border-bottom-right-radius: 40% 100%;
 }
 
 .theme-code-block.config pre::after {
   position: absolute;
-  top: var(--code-icon-padding-start);
-  left: var(--code-icon-padding-start);
+  top: var(--code-icon-padding);
+  left: var(--code-icon-padding);
   width: var(--code-icon-size);
   height: var(--code-icon-size);
   content: '';
