--- a/website/src/components/FileTree/styles.module.css
+++ b/website/src/components/FileTree/styles.module.css
@@ -1,8 +1,16 @@
 .fileTree {
+  padding: 1em;
   margin: 0 0 1em;
   overflow: auto;
+  font-family: var(--ifm-font-family-monospace);
+  white-space: pre;
   background-color: var(--ifm-code-background);
   border-radius: var(--ifm-code-border-radius);
+}
+
+.fileTree code {
+  background-color: transparent;
+  border: none;
 }
 
 .fileTree > ul {
