--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -22,15 +22,16 @@
   --ifm-color-primary-lightest: var(--ml-blue-lightest);
   --ifm-color-primary-lighter: #8bb9f5;
   --ifm-color-primary-light: #5096f0;
+
   /* Contrast AA (primary: 4.52, primary-dark: 5.36) */
   --ifm-color-primary: var(--ml-blue);
   --ifm-color-primary-dark: #1267d4;
+
   /* Contrast AAA (primary-darker: 7.1, primary-darkest: 11.29) */
   --ifm-color-primary-darker: #0f55b1;
   --ifm-color-primary-darkest: #0a3976;
   --ifm-link-color: var(--ifm-color-primary-darker);
   --docusaurus-highlighted-code-line-bg: rgb(0 0 0 / 10%);
-
   --ifm-code-font-size: 95%;
   --ifm-h2-font-size: 2rem;
   --ifm-h3-font-size: 1.5rem;
@@ -39,11 +40,13 @@
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
   /* Contrast AAA (primary: 8.63, lighter colors have higher values) */
+
   /* Additionally, primary has Lc-61.5 for the background color of #1b1b1d in APCA */
   --ifm-color-primary-lightest: #f5f9fe;
   --ifm-color-primary-lighter: #d2e4fb;
   --ifm-color-primary-light: #aecef8;
   --ifm-color-primary: #8bb9f5;
+
   /* Contrast AA (primary-dark: 6.82, primary-darker: 4.72) */
   --ifm-color-primary-dark: #68a4f2;
   --ifm-color-primary-darker: #3384ed;
@@ -156,4 +159,8 @@
 
 .footer__link-separator {
   display: none;
+}
+
+.h-0 {
+  height: 0;
 }
