Remove the focus ring from the search field when focusing on the reset button

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -137,7 +137,7 @@
   --docsearch-searchbox-shadow: inset 0 0 0 1px var(--ifm-color-emphasis-300);
 }
 
-.DocSearch-Form:focus-within {
+.DocSearch-Form:focus-within:not(:has(.DocSearch-Reset:focus-visible)) {
   --docsearch-searchbox-shadow: inset 0 0 0 2px var(--docsearch-primary-color);
 }
 
