--- a/website/src/components/Hero/styles.module.css
+++ b/website/src/components/Hero/styles.module.css
@@ -30,7 +30,8 @@
   width: 100%;
   height: 100%;
   content: '';
-  background: url('/img/obj-hero-dots.svg') no-repeat top left/calc(108 / 16 * 1em),
+  background:
+    url('/img/obj-hero-dots.svg') no-repeat top left/calc(108 / 16 * 1em),
     url('/img/obj-hero-dots.svg#r') no-repeat bottom right/calc(108 / 16 * 1em);
   background-color: var(--ml-blue);
 }
@@ -45,7 +46,8 @@
   width: calc(100% + var(--line-width) * 2);
   height: 100%;
   content: '';
-  background: url('/img/obj-hero-bg-left.svg') no-repeat bottom left var(--line-width),
+  background:
+    url('/img/obj-hero-bg-left.svg') no-repeat bottom left var(--line-width),
     url('/img/obj-hero-bg-right.svg#r') no-repeat top right var(--line-width);
   background-color: var(--ifm-color-content-inverse);
   border-radius: min(50%, 30em) 0 min(50%, 30em) 0;
