Fix non-rendering of empty lines

--- a/playground/src/index.css
+++ b/playground/src/index.css
@@ -40,6 +40,7 @@ body,
 .xterm-rows > * {
 	width: initial !important;
 	height: initial !important;
+	min-height: 1em;
 	overflow: visible !important;
 	text-wrap: initial !important;
 }
