--- a/test/fixture/astro/013.astro
+++ b/test/fixture/astro/013.astro
@@ -4,4 +4,4 @@ import { MyImage } from './MyImage.js';
 ---
 
 <MySection as="section"></MySection>
-<MyImage as="img" src="https://example.com/image.png" />
+<MyImage as="img" src="https://example.com/image.png" alt="accessible name" />
